--- a/Changes
+++ b/Changes
@@ -51,3 +51,8 @@ Fri Aug 31 05:42:19 NZST 2012
 Wed Jan 16 13:06:17 EST 2013
    * Fix dualvar anomalies - thanks Sven Dowideit
 
+Wed Nov 26 11:34:51 CET 2025
+   * Reanimate the code, make code compilable with C23
+
+Tue Dec 2 17:05:00 CET 2025
+   * Remove dead code thus eliminating compiler warnings
