--- a/Changes
+++ b/Changes
@@ -56,3 +56,6 @@ Wed Nov 26 11:34:51 CET 2025
 
 Tue Dec 2 17:05:00 CET 2025
    * Remove dead code thus eliminating compiler warnings
+
+Wed Jan 14 16:06:00 CET 2026
+   * Bugfix in destructor of function descriptors
